# mcp_server_scepa

./: .env.sample  README.md  docker-compose.yml  pyproject.toml  schema.tql
dockerfiles/: Dockerfile
src/mcp_server/: config.py  main.py
src/mcp_server/sources/: typedb_source.py
src/mcp_server/tools/: paper_search.py
src/mcp_server/utility/: globals.py
